[package]
name = "pinetree"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
panic = "abort"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
mp3-duration = "0.1.10"
rodio = "0.20.*"
rand = "0.8"
id3 = "1.16.0"
image = "0.24.2"
